--- a/index/templates/index/layout.html
+++ b/index/templates/index/layout.html
@@ -71,6 +71,9 @@
                 <div class="header-right ">
                     <!--theme-switch-->
                     <div class="theme-switch-wrapper">
+                        <div class="botton-sub">
+                            <a href={% url 'new-post' %} class="btn-subscribe">Create new post</a>
+                        </div>
                         <label class="theme-switch" for="checkbox" title="change mode">
                             <input type="checkbox" id="checkbox" />
                             <span class="slider round ">
