--- a/index/templates/index/about-me.html
+++ b/index/templates/index/about-me.html
@@ -9,14 +9,6 @@
                      <div class="col-lg-12">
                          <div class="section-heading-2-title">
                              <h1>About me</h1> 
-                             
-                             <h2>{{nombre}}</h2>
-    
-                             <br>
-                         
-                             {% for valor in lista %}
-                                 <li> {{valor}} </li>
-                             {% endfor %}
 
                          </div>
                      </div>  
@@ -31,7 +23,7 @@
                 <div class="row ">
                     <div class="col-lg-12 ">                   
                         <div class="description">
-                            <h3 >Thank you for checking out our blog website.</h3>
+                            <h3 >Thank you for checking out my blog website.</h3>
                             <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus finibus, nisi vitae dapibus luctus, ante magna auctor magna, aliquet lacinia mauris magna a ligula. Nunc pharetra lectus eros, at blandit nisi iaculis vel. Donec vehicula eros nibh, in efficitur libero luctus vel. Nunc ac augue sapien. Praesent mollis dolor a velit porta, non egestas mauris facilisis. Aliquam fermentum mauris ex, et tristique tortor pellentesque.
                             </p>
                             <p>
