--- a/index/templates/index/contact.html
+++ b/index/templates/index/contact.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="contact-info">
-                            <h3>feel free to contact us</h3>
+                            <h3>feel free to contact me</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate deserunt suscipit error deleniti
                                 porro, pariatur voluptatem iste quos maxime aspernatur.</p>
                         </div>
