--- a/index/templates/index/layout.html
+++ b/index/templates/index/layout.html
@@ -57,7 +57,24 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href={% url 'about-me' %}> about me </a>
                                 </li>
-
+                                
+                                <li class="nav-item">
+                                    <a class="nav-link" href={% url 'list-posts' %}> search posts </a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle " href={% url 'index' %} data-toggle="dropdown"> Create data </a>
+                                    <ul class="dropdown-menu fade-up">
+                                        <li>
+                                            <a class="dropdown-item " href={% url 'new-category' %}>Categories</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href={% url 'new-post' %}>Posts </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item " href={% url 'new-comment' %}>Comments </a>
+                                        </li>                                        
+                                    </ul>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href={% url 'contact' %}> contact </a>
                                 </li>
@@ -71,9 +88,9 @@
                 <div class="header-right ">
                     <!--theme-switch-->
                     <div class="theme-switch-wrapper">
-                        <div class="botton-sub">
+                        {% comment %} <div class="botton-sub">
                             <a href={% url 'new-post' %} class="btn-subscribe">Create new post</a>
-                        </div>
+                        </div> {% endcomment %}
                         <label class="theme-switch" for="checkbox" title="change mode">
                             <input type="checkbox" id="checkbox" />
                             <span class="slider round ">
