--- a/index/templates/index/new-category.html
+++ b/index/templates/index/new-category.html
@@ -10,7 +10,7 @@
                  <div class="row">
                      <div class="col-lg-12">
                          <div class="section-heading-2-title">
-                             <h1>Enter new Post</h1> 
+                             <h1>Enter new Category</h1> 
                          </div>
                      </div>  
                  </div>
@@ -21,34 +21,22 @@
     <section class="login">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 col-md-8 m-auto">
+                <div class="col-lg-6 col-md-8 m-auto" style="margin-bottom:200px">
                     <div class="login-content">
                      
-                        <form  action={% url 'new-post' %} class="sign-form widget-form " method="post">
+                        <form  action={% url 'new-category' %} class="sign-form widget-form " method="post">
                             {% csrf_token %}
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Title" name="title" value="">
                             </div>
 
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Short Description" name="short_description" value="">
+                                <input type="text" class="form-control" placeholder="Description" name="description" value="">
                             </div>
 
-                            <div class="form-group" >
-                                <select required name="category" class="form-control">
-                                    <option value="" disabled selected hidden>Select category</option>
-                                    <option value="1">AWS</option>
-                                    <option value="2">React</option>
-                                    <option value="3">Python</option>
-                                    <option value="4">Laravel</option>
-                                </select>
-                            </div>  
-                            
-                        
                             <div class="form-group">
                                 <button type="submit" class="btn-custom">Create</button>
-                            </div>
-                           
+                            </div>                           
                         </form>
                     </div> 
                 </div>
