--- a/index/templates/index/posts.html
+++ b/index/templates/index/posts.html
@@ -1,24 +1,154 @@
 {% extends 'index/layout.html' %}
 
-{% block 'main_block' %}
+{% block 'main_block' %}    
 
-    <div class="section-heading " >
-        <div class="container-fluid">
-             <div class="section-heading-2">
-                 <div class="row">
-                     <div class="col-lg-12">
-                         <div class="section-heading-2-title">
-                             <h1>Posts</h1> 
-                             
-
-                         </div>
-                     </div>  
-                 </div>
+{% load static %}
+    
+<div class="section-heading " >
+    <div class="container-fluid">
+         <div class="section-heading-2">
+             <div class="row">
+                 <div class="col-lg-12">
+                     <div class="section-heading-2-title">
+                         <h1>Post results</h1>
+                     </div>
+                 </div>  
              </div>
          </div>
-    </div>
+     </div>
+</div>
 
-       
+<section class="contact">
+    <div class="container-fluid">
+        <div class="contact-area">
+            <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
+                    <div class="login-content">
+                    <!--form-->
+                        <form action="" method="get">
+                            {% csrf_token %}
+                            <table>
+                                {{form.as_table}}
+                            </table>
+                            <button type="submit" name="submit" class="btn-custom">Search</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-3"></div>
+            </div> 
+        </div>
+    </div>
+</section> 
+
+<section class="blog-layout-2" style="text-align:center;">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>List of posts</h2>
+                {% for post in posts%}                    
+                    <div class="post-list-content" style="text-align:center">
+                        <h4 class="entry-title" style="color:blue">
+                                {{post.title}}
+                        </h4>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
+{% comment %} <section class="blog-layout-2">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12"> 
+                <!--post 1-->
+                <div class="post-list post-list-style2">
+                    <div class="post-list-image">
+                        <a href="">
+                            <img src={% static 'assets/img/blog/30.jpg' %} alt="">
+                        </a>
+                    </div>
+                    <div class="post-list-content">
+                        <h3 class="entry-title">
+                            <a href="">Business has only two functions — marketing and innovation.</a>
+                        </h3>  
+                        <ul class="entry-meta">
+                            <li class="post-author-img"><img src={% static 'assets/img/author/1.jpg' %} alt=""></li>
+                            <li class="post-author"> <a href="">Meriam Smith</a></li>
+                            <li class="entry-cat"> <a href="" class="category-style-1 "> <span class="line"></span> interior</a></li>
+                            <li class="post-date"> <span class="line"></span> february 10 ,2022</li>
+                        </ul>
+                        <div class="post-exerpt">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ut est minus iste in accusantium repellat repudiandae nulla blanditiis iusto dolores!</p>
+                        </div>
+                        <div class="post-btn">
+                            <a href="" class="btn-read-more">Continue Reading <i class="las la-long-arrow-alt-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                
+
+                <!--post 2-->
+                <div class="post-list post-list-style2">
+                    <div class="post-list-image">
+                        <a href="">
+                            <img src={% static 'assets/img/blog/35.jpg' %} alt="">
+                        </a>
+                    </div>
+                    <div class="post-list-content">
+                        <h3 class="entry-title">
+                            <a href="">It’s easier to ask Forgiveness than it is to get Permission. </a>
+                        </h3>  
+                        <ul class="entry-meta">
+                            <li class="post-author-img"><img src={% static 'assets/img/author/2.jpg' %} alt=""></li>
+                            <li class="post-author"> <a href="">Meriam Smith</a></li>
+                            <li class="entry-cat"> <a href="" class="category-style-1 "> <span class="line"></span> interior</a></li>
+                            <li class="post-date"> <span class="line"></span> february 10 ,2022</li>
+                        </ul>
+                        <div class="post-exerpt">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ut est minus iste in accusantium repellat repudiandae nulla blanditiis iusto dolores!</p>
+                        </div>
+                        <div class="post-btn">
+                            <a href="" class="btn-read-more">Continue Reading <i class="las la-long-arrow-alt-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+              
+            
+                <!--post 3-->
+                <div class="post-list post-list-style2">
+                    <div class="post-list-image">
+                        <a href="">
+                            <img src={% static 'assets/img/blog/27.jpg' %} alt="">
+                        </a>
+                    </div>
+                    <div class="post-list-content">
+                        <h3 class="entry-title">
+                            <a href="">Build something 100 people love, not something 1 million people kind of like. </a>
+                        </h3>  
+                        <ul class="entry-meta">
+                            <li class="post-author-img"><img src={% static 'assets/img/author/3.jpg' %} alt=""></li>
+                            <li class="post-author"> <a href="">Meriam Smith</a></li>
+                            <li class="entry-cat"> <a href="" class="category-style-1 "> <span class="line"></span> interior</a></li>
+                            <li class="post-date"> <span class="line"></span> february 10 ,2022</li>
+                        </ul>
+                        <div class="post-exerpt">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ut est minus iste in accusantium repellat repudiandae nulla blanditiis iusto dolores!</p>
+                        </div>
+                        <div class="post-btn">
+                            <a href="" class="btn-read-more">Continue Reading <i class="las la-long-arrow-alt-right"></i></a>
+                        </div>
+                    </div>
+                </div>            
+               
+            </div>
+        </div>
+    </div>
+</section> {% endcomment %}
 
 {% endblock 'main_block' %}
     
