--- a/index/templates/index/new-post.html
+++ b/index/templates/index/new-post.html
@@ -35,12 +35,12 @@
                             </div>
 
                             <div class="form-group" >
-                                <select required name="category" class="form-control">
-                                    <option value="" disabled selected hidden>Select category</option>
-                                    <option value="1">AWS</option>
-                                    <option value="2">React</option>
-                                    <option value="3">Python</option>
-                                    <option value="4">Laravel</option>
+                                <span style="margin-left:5px">Category:</span>
+                                <select required name="category" style="margin-left:5px">
+                                    <option value="" disabled selected hidden>Select a category</option>
+                                    {% for cat in categories%} 
+                                        <option value="{{cat.id}}">{{cat.title}}</option>    
+                                    {% endfor %}                                
                                 </select>
                             </div>  
                             
