--- a/index/templates/admin/layout.html
+++ b/index/templates/admin/layout.html
@@ -20,26 +20,11 @@
           
             <nav class="main-header navbar navbar-expand navbar-white navbar-light">
                 <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-                    <i class="fas fa-search"></i>
-                    </a>
-                    <div class="navbar-search-block">
-                    <form class="form-inline">
-                        <div class="input-group input-group-sm">
-                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                        <div class="input-group-append">
-                            <button class="btn btn-navbar" type="submit">
-                            <i class="fas fa-search"></i>
-                            </button>
-                            <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                            <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        </div>
-                    </form>
-                    </div>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" title="Logout" href={% url 'logout' %}>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a>                        
+                    </li>
                 </ul>
             </nav>
     
@@ -99,7 +84,7 @@
 
             <footer class="main-footer">   
                 <div class="float-right d-none d-sm-inline">
-                v. 1.0.2
+                v. 1.0.3
                 </div>    
                 <strong>Copyright &copy; 2022 <a href="https://srojasweb.dev">srojas</a>.</strong> All rights reserved.
             </footer>
