--- a/index/templates/admin/register-page.html
+++ b/index/templates/admin/register-page.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href={% static 'assets-admin/dist/img/icon.png' %} >
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">  
   <link rel="stylesheet" href={% static 'assets-admin/dist/plugins/fontawesome-free/css/all.min.css' %}>  
-  <!-- <link rel="stylesheet" href={% static 'assets-admin/dist/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}>  -->
+  
   <link rel="stylesheet" href={% static 'assets-admin/dist/css/adminlte.min.css' %}>
 </head>
 <body class="hold-transition login-page">
@@ -19,9 +19,7 @@
   
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign in to start your session</p>
-
-      {% comment %} <form action="#" method="post"> {% endcomment %}
+      <p class="login-box-msg">Rgister as new user</p>
 
       <p>
         {% if msj %}
@@ -29,10 +27,10 @@
         {% endif %}
       </p>
 
-      <form  action={% url 'login' %} method="post">
+      <form  action={% url 'register' %} method="post">
         {% csrf_token %}      
         <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Email" name="username">
+          <input type="text" class="form-control" placeholder="User name" name="username">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -40,35 +38,39 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password" name="password">
+          <input type="email" class="form-control" placeholder="Email" name="email">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
+        </div>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" placeholder="Password" name="password1">
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-8">
-            <div class="icheck-primary">
-              <input type="checkbox" id="remember">
-              <label for="remember">
-                Remember Me
-              </label>
+        <div class="input-group mb-3">
+          <input type="password" class="form-control" placeholder="Re entry password" name="password2">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
             </div>
           </div>
-          
-          <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
-          </div>
-          
         </div>
-      </form>     
-
-      {% comment %} <p class="mb-1">
-        <a href="#">I forgot my password</a>
-      </p> {% endcomment %}
+        <div class="row">          
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary btn-block">Register</button>
+          </div>          
+        </div>
+      </form> 
+      
       <p class="mb-0">
-        <a href={% url 'register' %} class="text-center">Register a new user</a>        
+        <br><br>
+        <a href={% url 'login' %} class="text-center">Login</a> 
       </p>
     </div>
    
@@ -77,6 +79,20 @@
 
 <script src={% static 'assets-admin/dist/plugins/jquery/jquery.min.js' %}></script>
 <script src={% static 'assets-admin/dist/plugins/bootstrap/js/bootstrap.bundle.min.js' %}></script>
-<!-- <script src={% static 'assets-admin/dist/dist/js/adminlte.min.js' %}></script> -->
+
 </body>
 </html>
+
+{% comment %} <p>
+  {% if msj %}
+      {{msj}}
+  {% endif %}
+</p>
+
+<form action={% url 'register' %} method="post">
+  {% csrf_token %}
+  <table>
+      {{form.as_table}}
+  </table>
+  <button>Register</button>
+</form> {% endcomment %}
