adding account app and other settings | v. 1.1.0

--- a/accounts/templates/accounts/layout.html
+++ b/accounts/templates/accounts/layout.html
@@ -30,7 +30,7 @@
     
             <aside class="main-sidebar sidebar-dark-primary elevation-4">
         
-                <a href="#" class="brand-link">
+                <a href={% url 'content-admin' %} class="brand-link">
                 <img src={% static 'assets-admin/dist/img/icon.png' %} alt="srojasweb-logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">Blog Admin</span>
                 </a>
@@ -84,7 +84,7 @@
 
             <footer class="main-footer">   
                 <div class="float-right d-none d-sm-inline">
-                v. 1.0.3
+                v. 1.1.0
                 </div>    
                 <strong>Copyright &copy; 2022 <a href="https://srojasweb.dev">srojas</a>.</strong> All rights reserved.
             </footer>
