--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'admin/layout.html' %}
+{% extends 'accounts/layout.html' %}
 
 {% block 'main_block' %}    
 
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href={% url 'index' %}>Go to the Blog</a></li>
                     <!-- <li class="breadcrumb-item active">Starter Page</li> -->
                     </ol>
                 </div>
