--- a/accounts/templates/accounts/layout.html
+++ b/accounts/templates/accounts/layout.html
@@ -59,13 +59,13 @@
                                 </a>
                                 <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link active">
+                                    <a href={% url 'admin-categories' %} class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Categories</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href={% url 'admin-posts' %} class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>Posts</p>
                                     </a>
