--- a/accounts/templates/accounts/layout.html
+++ b/accounts/templates/accounts/layout.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href={% static 'assets-admin/dist/plugins/fontawesome-free/css/all.min.css' %}>
         <link rel="stylesheet" href={% static 'assets-admin/dist/css/adminlte.min.css' %}>
         <link rel="icon" type="image/x-icon" href={% static 'assets-admin/dist/img/icon.png' %} >
+        <script src="https://kit.fontawesome.com/ed8cda7578.js" crossorigin="anonymous"></script>
     </head>
 
     <body class="hold-transition sidebar-mini">
@@ -84,7 +85,7 @@
 
             <footer class="main-footer">   
                 <div class="float-right d-none d-sm-inline">
-                v. 1.2.1
+                v. 1.2.2
                 </div>    
                 <strong>Copyright &copy; 2022 <a href="https://srojasweb.dev">srojas</a>.</strong> All rights reserved.
             </footer>
@@ -94,6 +95,7 @@
         <script src= {% static 'assets-admin/dist/plugins/bootstrap/js/bootstrap.bundle.min.js' %}></script>
         <script src= {% static 'assets-admin/dist/plugins/bs-custom-file-input/bs-custom-file-input.min.js' %}></script>
         <script src= {% static 'assets-admin/dist/js/adminlte.min.js' %} ></script>
+        
         
     
       </body>
